--- a/app/src/main/res/layout/activity_simple.xml
+++ b/app/src/main/res/layout/activity_simple.xml
@@ -12,6 +12,12 @@
     tools:context=".SimpleActivity">
 
     <Button
+        android:id="@+id/btn_create"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Create"
+        android:textColor="@android:color/black" />
+    <Button
         android:id="@+id/btn_just"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
