--- a/app/src/main/res/layout/activity_observable.xml
+++ b/app/src/main/res/layout/activity_observable.xml
@@ -9,7 +9,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:orientation="vertical"
-    tools:context=".SimpleActivity">
+    tools:context=".ObservableActivity">
 
     <Button
         android:id="@+id/btn_create"
