--- a/app/src/main/res/layout/activity_observer.xml
+++ b/app/src/main/res/layout/activity_observer.xml
@@ -1,10 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
+    android:orientation="vertical"
     tools:context=".ObserverActivity">
 
-</android.support.constraint.ConstraintLayout>
+    <Button
+        android:id="@+id/btn_action0"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Action0"
+        android:textColor="@android:color/black" />
+    <Button
+        android:id="@+id/btn_action2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Action2"
+        android:textColor="@android:color/black" />
+</LinearLayout>
