--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,7 +26,12 @@
         android:onClick="observerClick"
         android:text="@string/simple_observer"
         android:textColor="@android:color/black"/>
-
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:onClick="operatorsClick"
+        android:text="@string/simple_operators"
+        android:textColor="@android:color/black"/>
 
 </LinearLayout>
 </ScrollView>
